# python-xtce

./: README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
xtce/: test_xtceschema.py  xtce_1.2.xsd  xtce_1.3.xsd  xtcemsg.py  xtceschema.py
xtce/examples/: README.md  ccsds_660x1g2.xml  ccsds_660x2g2.xml  test_examples.py  unittest.xml
xtce/examples/BogusSAT/: BogusSAT_modified.xml
